Fix sudden shifting of content when search if affixed.

--- a/website/static/css/pages/support-page.css
+++ b/website/static/css/pages/support-page.css
@@ -83,6 +83,9 @@
 .content-layer {
     border-top: 1px solid #eee;
 }
+.content-padding {
+    padding-top: 145px; /* To pad for the affixed menu changes */
+}
 .support-item.search-selected {
     box-shadow: 0 0 5px #9195AD;
 }
